data/forge_javadoc/1.7.10/processed/net_minecraft_client_model_ModelSpider.md
# ModelSpider

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelSpider

## Class signature

```java
public class ModelSpider extends ModelBase
```

## Constructors

- `ModelSpider()`

## Methods

- `void render(Entity p_78088_1_, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float p_78088_7_)`
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity p_78087_7_)`

## Fields

- `ModelRenderer spiderBody`
- `ModelRenderer spiderHead`
- `ModelRenderer spiderLeg1`
- `ModelRenderer spiderLeg2`
- `ModelRenderer spiderLeg3`
- `ModelRenderer spiderLeg4`
- `ModelRenderer spiderLeg5`
- `ModelRenderer spiderLeg6`
- `ModelRenderer spiderLeg7`
- `ModelRenderer spiderLeg8`
- `ModelRenderer spiderNeck`