data/forge_javadoc/1.8.9/processed/net_minecraft_client_model_ModelSpider.md
# ModelSpider

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelSpider

## Class signature

```java
public class ModelSpider extends ModelBase
```

## Constructors

- `ModelSpider()`

## Methods

- `void render(Entity entityIn, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float scale)` — Sets the models various rotation angles then renders the model.
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity entityIn)` — Sets the model's various rotation angles.

## Fields

- `ModelRenderer spiderBody` — The spider's body box
- `ModelRenderer spiderHead` — The spider's head box
- `ModelRenderer spiderLeg1` — Spider's first leg
- `ModelRenderer spiderLeg2` — Spider's second leg
- `ModelRenderer spiderLeg3` — Spider's third leg
- `ModelRenderer spiderLeg4` — Spider's fourth leg
- `ModelRenderer spiderLeg5` — Spider's fifth leg
- `ModelRenderer spiderLeg6` — Spider's sixth leg
- `ModelRenderer spiderLeg7` — Spider's seventh leg
- `ModelRenderer spiderLeg8` — Spider's eight leg
- `ModelRenderer spiderNeck` — The spider's neck box